--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,6 @@
 h1{
   font-size: 20px;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family:'Times New Roman', Times, serif;
+  color:black;
+  text-align: center;
 }
