--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 h1{
   font-size: 20px;
-  font-family:'Times New Roman', Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
   color:black;
   text-align: center;
 }
