--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,12 @@
+body{
+  font-size: 50px;
+}
 h1{
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
   color:black;
   text-align: center;
+}
+p{
+  font-size:50px;
 }
